[gd_scene load_steps=2 format=3 uid="uid://rvm860n2yqxb"]

[ext_resource type="Script" uid="uid://btklfdiwgncd1" path="res://Scripts/confirmation_modal.gd" id="1_mf5cn"]

[node name="ConfirmationModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mf5cn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21176471, 0.21176471, 0.21176471, 0.6)

[node name="Modal" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(128, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Modal"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderLabel" type="Label" parent="Modal/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm load"

[node name="MessageLabel" type="Label" parent="Modal/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "lmao"

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="ConfirmButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "Confirm"

[node name="CancelButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "Cancel"
